# ruleset-policy-bot

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml  test.yml
scripts/: reset-ci-tests.sh
src/: lib.rs  null_date_format.rs
src/soc2/: asset_level.rs  mod.rs  rule_suit.rs
tests/: integration.rs  ruleset.rs
tests/fixtures/: rulesuite1.json  rulesuite2.json  rulesuites.json
tests/snapshots/: integration__evaluate_rule_suites-2.snap  integration__evaluate_rule_suites.snap  integration__updating_rule_suites-2.snap  integration__updating_rule_suites.snap
